# GTC

./: .gitignore  Cargo.toml  README.md
src/: assets.rs  dat.rs  flycam.rs  main.rs  material.rs  mesh.rs  objects.rs  scm.rs  ui.rs  utils.rs
src/shaders/: gta_material.wgsl
