[package]
name = "gtc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
num-traits = "0.2.16"
rw-rs = { path = "../rw-rs", features = ["bevy"] }

[dependencies.bevy]
version = "0.11.0"
default-features = false
features = [
    "bevy_asset", # Assets management
    #"bevy_audio",         # Builtin audio
    "bevy_gilrs",         # Gamepad input support
    "bevy_scene",         # Scenes management
    "bevy_winit",         # Window management
    "bevy_render",        # Rendering framework core
    "bevy_core_pipeline", # Common rendering abstractions
    "bevy_sprite",        # 2D (sprites) rendering
    "bevy_pbr",           # 3D (physically-based) rendering
    "bevy_text",          # Text/font rendering
    "bevy_ui",            # UI toolkit
    "animation",          # Animation support
    "x11",                # Linux: Support X11 windowing system
    "wayland",
    "default_font",
    "multi-threaded",
    "bmp",
    "tonemapping_luts",
    "ktx2",
    "zstd",
]

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.rw-rs]
opt-level = 0
