[package]
name = "gtc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-fs = "2.1.1"
bevy-inspector-egui = "0.31.0"
binrw = "0.14.1"
lazy_static = "1.4.0"
nom-derive = "0.10.1"
num-traits = "0.2.16"
rw-rs = { path = "../rw-rs" }
thiserror = "1.0.48"
clap = { version = "4.5.37", features = ["derive"] }

[dependencies.bevy]
version = "0.16.0"
features = ["file_watcher", "embedded_watcher"]

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.rw-rs]
opt-level = 0
